2013-06-12: calculate mesh quality (calc_mesh_quality)
2013-06-11: dramatic speedup of show_fem for 3D meshes
2013-06-07: various improvements to place_elec_on_surf
2013-06-06: global managment of debug flags (eidors_debug)
2013-06-03: allow specifying command line options for gmsh
2013-05-29: ======================= RELEASE 3.7.1 ========================
2013-05-26: add anti-aliasing to print_convert
2013-05-18: refactor mk_GREIT_model to use mk_pixel_slice
2013-05-16: new print_convert that doesn't use external tools (imagemagick)
2013-05-16: improve gmsh interface 
2013-05-16: allow spaces in path to netgen
2013-05-05: fix compatibility with older Matlab and Windows
2013-04-25: citeme tool to request citations for specific functions
2013-04-22: ======================== RELEASE 3.7 =========================
2013-04-22: fminsearch for Octave
2013-04-22: Use a single ng.bat file once and for all
2013-04-18: readers for LQ2 file format
2013-04.17: Quick GREIT models: mk_common_gridmdl('GREIT','mdl_library_string')
2013-04-17: Desired image function for mk_GREIT_model: opt.desired_image_fn
2013-04-17: Cache debug output: eidors_cache debug_on/debug_off
2013-04-16: Auto-compile required mex file on startup on Linux
2013-04-16: SVN revision number on startup in dev versions
2013-04-16: Shorthand caching interface: eidors_cache(@fn, params)
2013-04-16: 2D interface to Netgen: ng_mk_2d_model
2013-04-13: Added apparent_resisitivity fwd_solver and jacobian
2013-03-20: Node_data support for mk_image
2013-03-20: Physics support: conductivity, resisitivity and logs:q
2013-02-18: Electrode placement on arbitrary meshes: place_elec_on_surf
2013-02-18: merge non-overlapping (surface) meshes: merge_meshes
2013-02-18: Expand support for gmsh: gmsh_stl2tet
2013-01-23: Quick building of pixel rec_models: mk_pixel_slice
2013-01-23: Draw a single colourbar for mulitple sub-plots: common_colourbar
2013-01-23: Outside parameter for c2f mapping