@@ -1,3 +1,4 @@
+2013-06-20: inv_solve reports solution error by default
 2013-06-12: calculate mesh quality (calc_mesh_quality)
 2013-06-11: dramatic speedup of show_fem for 3D meshes
 2013-06-07: various improvements to place_elec_on_surf
